[refactor] 검증 책임을 ActuatorValidator로 분리